# JuniorHome

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/physiomanifold/agi_primitives/: zero_trust_kernel.py
src/physiomanifold/inference_engine/: causal_routing.py
src/physiomanifold/manifold_geometry/: discrete_ricci.py
src/physiomanifold/physics_principles/: noether_invariant.py
src/physiomanifold/recursive_feedback/: active_inference.py
src/physiomanifold/tda_svd_core/: manifold_collapse.py
src/physiomanifold/ui_terraforming/: agent.py  server.py
src/physiomanifold/ui_terraforming/public/: index.html
web3node/: metric_tensors.py  rsvd_metal.py  svd_metal.py  tda_mesh.py
